Fixed dark mode styling of the Reload button on Synced Clippings folder
in Clippings Manager and Sidebar (part of issue #450)

--- a/wx-src/pages/clippingsMgr.css
+++ b/wx-src/pages/clippingsMgr.css
@@ -31,12 +31,6 @@
     --color-plchldr-toolbar-text: #0c0c0d;
     --color-toolbarbtn-hover-bkgd: rgba(12, 12, 13, 0.2);
     --color-toolbarbtn-active-bkgd: rgba(12, 12, 13, 0.3);
-    --color-reload-sync-fldr-btn-bkgd: #fbfbfb;
-    --color-reload-sync-fldr-btn-border: #ddd;
-    --color-reload-sync-fldr-btn-hover-bkgd: #ebebeb;
-    --color-reload-sync-fldr-btn-hover-border: #b1b1b1;
-    --color-reload-sync-fldr-btn-active-bkgd: #d7d7db;
-    --color-reload-sync-fldr-btn-active-border: #b1b1b1;
     --color-toolbar-menubtn-open: #d7d7db;
     --color-clippings-tree-bkgd: #fbfbfb;
     --color-tree-splitter: #fbfbfb;
@@ -118,12 +112,6 @@
 	--color-plchldr-toolbar-text: #f9f9fa;
 	--color-toolbarbtn-hover-bkgd: #737373;
 	--color-toolbarbtn-active-bkgd: #b1b1b3;
-	--color-reload-sync-fldr-btn-bkgd: #737373;
-	--color-reload-sync-fldr-btn-border: #b1b1b3;
-	--color-reload-sync-fldr-btn-hover-bkgd: #b1b1b3;
-	--color-reload-sync-fldr-btn-hover-border: #b1b1b3;
-	--color-reload-sync-fldr-btn-active-bkgd: #737373;
-	--color-reload-sync-fldr-btn-active-border: #737373;
 	--color-toolbar-menubtn-open: #737373;
 	--color-tree-splitter: #4a4a4f;
 	--color-tree-splitter-border: #4a4a4f;
@@ -493,35 +481,6 @@ select {
 /* Search results in tree list. */
 .fancytree-ext-filter-hide span.fancytree-node.fancytree-match span.fancytree-title, .fancytree-ext-filter-hide tr.fancytree-match span.fancytree-title {
     color: var(--color-default-text);
-}
-
-#reload-sync-fldr-btn {
-    display: inline-block;
-
-    position: relative;
-    top: 0px;
-    left: 4px;
-    width: 24px;
-    height: 20px;
-
-    border: 1px solid var(--color-reload-sync-fldr-btn-border);
-    border-radius: 3px;
-
-    background-color: var(--color-reload-sync-fldr-btn-bkgd);
-    background-image: url("../img/reload.svg");
-    background-size: 14px 14px;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-#reload-sync-fldr-btn:hover {
-    border: 1px solid var(--color-reload-sync-fldr-btn-hover-border);
-    background-color: var(--color-reload-sync-fldr-btn-hover-bkgd);
-}
-
-#reload-sync-fldr-btn:active {
-    border: 1px solid var(--color-reload-sync-fldr-btn-active-border);
-    background-color: var(--color-reload-sync-fldr-btn-active-bkgd);
 }
 
 /* If user has set the option to only show synced items in the Clippings menu,
